--- a/style.css
+++ b/style.css
@@ -1,5 +1,23 @@
 #city {
-  margin: 25px 60px -20px 55px;
   font-size: 50px;
   font-weight: bold;
+  margin-bottom: -20px;
+  margin-left: 55px;
+  margin-top: 25px; 
+  
+};
+#tempF {
+  font-size: 30px;
+  font-weight: bold;
+  margin-left: 53px;
+  margin-top: 10px; 
+};
+#humd {
+  font-size: 30px;
+  font-weight: bold;
+  margin-left: -150px;
+  margin-top: 10px; 
+};
+#windSpeed {
+  font-size: 20px;
 };
